fixtures/RH003/negative/before/task_queue.lua
local TaskQueue = {}

function TaskQueue.new()
  return { tasks = {} }
end

return TaskQueue
